// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers peersReducer should correctly getPeers 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peers": Array [],
  "peersLoading": true,
}
`;

exports[`reducers peersReducer should correctly receivePeers 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peers": "foo",
  "peersLoading": false,
}
`;

exports[`reducers peersReducer should handle initial state 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "peers": Array [],
  "peersLoading": false,
}
`;
